@@ -1,3 +1,7 @@
+2013-03-08  Andreas Arnez  <arnez@linux.vnet.ibm.com>
+
+	* readelf.c (get_note_type): Add NT_S390_TDB.
+
 2013-03-07  Alan Modra  <amodra@gmail.com>
 
 	* strings.c (get_char): Dispense with buf[].  Instead shift
